feat: 背景左側の透かし文字を実装

--- a/index.html
+++ b/index.html
@@ -5,7 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
+    <title>My Profile - Sho Wakatsuki</title>
   </head>
-  <body></body>
+  <body>
+    <header class="max-w-1440"></header>
+    <main class="max-w-1440">
+      <div id="side">
+        <div class="side__text--lg">SHO WAKATSUKI</div>
+        <div class="side__text--lg">WEB DEVELOPER</div>
+        <div class="side__text--lg">I LOVE RAMEN</div>
+      </div>
+      <div id="main" class="max-w-1080">
+        <!-- details section -->
+        <section id="details">
+          <div class="details__image-container">
+            <img
+              class="details__item-image"
+              src="./assets/image/profile-image.jpg"
+              alt="若月翔"
+            />
+          </div>
+        </section>
+        <!-- end details section -->
+      </div>
+    </main>
+    <footer class="max-w-1440"></footer>
+  </body>
 </html>
