--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <title>My Profile - Sho Wakatsuki</title>
   </head>
   <body>
-    <header class="max-w-1440"></header>
+    <header class="max-w-1440">
+      <div class="header__main">
+        <h1 class="header__main-text header-text__shadow--white-lg">MY PROFILE</h1>
+      </div>
+      <div class="header__line--horizontal content__shadow-white--lg"></div>
+    </header>
     <main class="max-w-1440">
       <div id="side">
         <div class="side__text--lg">SHO WAKATSUKI</div>
