feat: detailsセクションを実装

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <body>
     <header class="max-w-1440">
       <div class="header__main">
-        <h1 class="header__main-text header-text__shadow--white-lg">MY PROFILE</h1>
+        <h1 class="header__main-text header-text__shadow--white-lg">
+          MY PROFILE
+        </h1>
       </div>
       <div class="header__line--horizontal content__shadow-white--lg"></div>
     </header>
@@ -39,8 +41,26 @@
               alt="若月翔"
             />
           </div>
+          <div class="details__text-container">
+            <h2 class="details__text--name">
+              若月 翔<span class="details__text--name-en">Sho Wakatsuki</span>
+            </h2>
+
+            <p class="details__text--description">
+              山梨県出身<br />
+              情報系の4年制学校卒<br />
+              特技はスティッチの声まね<br />
+              ラーメンを愛し、ラーメンに愛された男
+            </p>
+
+            <h3 class="details__text--motto">結果はあとから付いてくる</h3>
+          </div>
         </section>
         <!-- end details section -->
+        <div class="arrow__container">
+          <img class="arrow__image" src="./assets/image/arrow.svg" alt="" />
+        </div>
+        <section></section>
       </div>
     </main>
     <footer class="max-w-1440"></footer>
