update: スクロールを促す矢印のスタイルを改良

--- a/index.html
+++ b/index.html
@@ -34,26 +34,31 @@
       <div id="main" class="max-w-1080">
         <!-- details section -->
         <section id="details">
-          <div class="details__image-container">
-            <img
-              class="details__item-image"
-              src="./assets/image/profile-image.jpg"
-              alt="若月翔"
-            />
+          <div class="details__main">
+            <div class="details__image-container">
+              <img
+                class="details__item-image"
+                src="./assets/image/profile-image.jpg"
+                alt="若月翔"
+              />
+            </div>
+            <div class="details__text-container">
+              <h2 class="details__text--name">
+                若月 翔<span class="details__text--name-en">Sho Wakatsuki</span>
+              </h2>
+
+              <p class="details__text--description">
+                山梨県出身<br />
+                情報系の4年制学校卒<br />
+                特技はスティッチの声まね<br />
+                ラーメンを愛し、ラーメンに愛された男
+              </p>
+
+              <h3 class="details__text--motto">結果はあとから付いてくる</h3>
+            </div>
           </div>
-          <div class="details__text-container">
-            <h2 class="details__text--name">
-              若月 翔<span class="details__text--name-en">Sho Wakatsuki</span>
-            </h2>
-
-            <p class="details__text--description">
-              山梨県出身<br />
-              情報系の4年制学校卒<br />
-              特技はスティッチの声まね<br />
-              ラーメンを愛し、ラーメンに愛された男
-            </p>
-
-            <h3 class="details__text--motto">結果はあとから付いてくる</h3>
+          <div class="arrow__container">
+            <img class="arrow__image" src="./assets/image/arrow.svg" alt="" />
           </div>
         </section>
         <!-- end details section -->
