feat: favoriteセクションを実装

--- a/index.html
+++ b/index.html
@@ -46,14 +46,12 @@
               <h2 class="details__text--name">
                 若月 翔<span class="details__text--name-en">Sho Wakatsuki</span>
               </h2>
-
               <p class="details__text--description">
                 山梨県出身<br />
                 情報系の4年制学校卒<br />
                 特技はスティッチの声まね<br />
                 ラーメンを愛し、ラーメンに愛された男
               </p>
-
               <h3 class="details__text--motto">結果はあとから付いてくる</h3>
             </div>
           </div>
@@ -62,10 +60,53 @@
           </div>
         </section>
         <!-- end details section -->
-        <div class="arrow__container">
-          <img class="arrow__image" src="./assets/image/arrow.svg" alt="" />
-        </div>
-        <section></section>
+
+        <!-- favorite section -->
+        <section id="favorite">
+          <div class="section__header-container">
+            <h2 class="section-header__text header-text__shadow--white-lg">
+              MY FAVORITE
+            </h2>
+            <div
+              class="header__line--horizontal content__shadow-white--lg"
+            ></div>
+          </div>
+
+          <div class="favorite__main max-w-960">
+            <div class="favorite__row--container">
+              <div class="favorite__images-container">
+                <div class="favorite__image">
+                  <img src="./assets/image/ramen-miso.jpg" alt="" />
+                </div>
+                <div class="favorite__image">
+                  <img src="./assets/image/ramen-ziro.jpg" alt="" />
+                </div>
+              </div>
+              <div class="favorite__text">
+                1週間ラーメンを口にしないと禁断症状が、、、<br />
+                醤油・味噌・塩・家系・次郎何でもばっちこい。<br />
+                ラーメンをはじめとして麺類全般が大好きです！
+              </div>
+            </div>
+
+            <div class="favorite__row--container">
+              <div class="favorite__images-container">
+                <div class="favorite__image">
+                  <img src="./assets/image/usamaru.jpg" alt="" />
+                </div>
+                <div class="favorite__image">
+                  <img src="./assets/image/kedakoda.jpg" alt="" />
+                </div>
+              </div>
+              <div class="favorite__text">
+                ゆるふわなキャラクターが好きで<br />
+                スマホのホーム画面は常に「うさまる」<br />
+                犬や猫などのもふもふ動物も好きです！
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- end favorite section -->
       </div>
     </main>
     <footer class="max-w-1440"></footer>
