feat: personalityセクションを実装

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                   <img src="./assets/image/ramen-ziro.jpg" alt="" />
                 </div>
               </div>
-              <div class="favorite__text">
+              <p class="favorite__text">
                 1週間ラーメンを口にしないと禁断症状が、、、<br />
                 醤油・味噌・塩・家系・次郎何でもばっちこい。<br />
                 ラーメンをはじめとして麺類全般が大好きです！
-              </div>
+              </p>
             </div>
 
             <div class="favorite__row--container">
@@ -98,15 +98,47 @@
                   <img src="./assets/image/kedakoda.jpg" alt="" />
                 </div>
               </div>
-              <div class="favorite__text">
+              <p class="favorite__text">
                 ゆるふわなキャラクターが好きで<br />
                 スマホのホーム画面は常に「うさまる」<br />
                 犬や猫などのもふもふ動物も好きです！
-              </div>
+              </p>
             </div>
           </div>
         </section>
         <!-- end favorite section -->
+
+        <!-- personality section -->
+        <section id="personality">
+          <div class="section__header-container">
+            <h2 class="section-header__text header-text__shadow--white-lg">
+              MY PERSONALITY
+            </h2>
+            <div
+              class="header__line--horizontal content__shadow-white--lg"
+            ></div>
+          </div>
+          <div class="personality__main max-w-960">
+            <div class="personality__image-container">
+              <img
+                class="personality__image"
+                src="./assets/image/personality.png"
+                alt=""
+              />
+            </div>
+            <p class="personality__text">
+              考え込みすぎず、自分の意志をもって突き進みます。<br />
+              前に出ること、何かを主張することに躊躇しません。<br />
+              <br />
+              <span
+                class="personality__text--emphasis description__text--emphasis"
+                >「弾丸の如く、早く速く」</span
+              ><br />
+              まずは自分が、誰よりも先に。
+            </p>
+          </div>
+        </section>
+        <!-- end personality section -->
       </div>
     </main>
     <footer class="max-w-1440"></footer>
