update: クラス名を修正

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
 
           <div class="favorite__main max-w-960">
-            <div class="favorite__row--container">
+            <div class="favorite__row-container">
               <div class="favorite__images-container">
                 <div class="favorite__image">
                   <img src="./assets/image/ramen-miso.jpg" alt="" />
@@ -89,7 +89,7 @@
               </p>
             </div>
 
-            <div class="favorite__row--container">
+            <div class="favorite__row-container">
               <div class="favorite__images-container">
                 <div class="favorite__image">
                   <img src="./assets/image/usamaru.jpg" alt="" />
