feat: productsセクションを実装

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
                 ラーメンをはじめとして麺類全般が大好きです！
               </p>
             </div>
-
             <div class="favorite__row-container">
               <div class="favorite__images-container">
                 <div class="favorite__image">
@@ -139,6 +138,54 @@
           </div>
         </section>
         <!-- end personality section -->
+
+        <!-- products section -->
+        <section id="products">
+          <div class="section__header-container">
+            <h2 class="section-header__text header-text__shadow--white-lg">
+              MY PRODUCTS
+            </h2>
+            <div
+              class="header__line--horizontal content__shadow-white--lg"
+            ></div>
+          </div>
+          <div class="products__main max-w-960">
+            <div class="products__row-container">
+              <div class="products__image-container">
+                <img src="./assets/image/form-system.jpg" alt="" />
+              </div>
+              <div class="products__text-container">
+                <h2 class="products__text--name">お問い合わせフォームCMS</h2>
+                <p class="products__text--description">
+                  地元山梨の企業さんのフォーム管理システムを開発
+                  丸2年かけてPHPで構築しました。
+                  SIで使用しているPHPの基礎を習得済みなので、
+                  スピーディに開発へアサインしていただけることを目標にしています。
+                </p>
+                <p class="description__text--sm">
+                  使用技術 : PHP, Javascript, Docker
+                </p>
+              </div>
+            </div>
+            <div class="products__row-container">
+              <div class="products__image-container">
+                <img src="./assets/image/cocktail.jpg" alt="" />
+              </div>
+              <div class="products__text-container">
+                <h2 class="products__text--name">カクテル検索アプリ</h2>
+                <p class="products__text--description">
+                  フロントエンドエンジニア必須のNext.jsを利用しています。
+                  自ら学び得ることで、会社としての学習コストを削減し数字につなげていきます。
+                  目指せ「髙橋さんの右腕」！！
+                </p>
+                <p class="description__text--sm">
+                  使用技術 : Next.js, Supabase, PrismaORM
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- end products section -->
       </div>
     </main>
     <footer class="max-w-1440"></footer>
