feat: targetセクションを実装

--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
               class="header__line--horizontal content__shadow-white--lg"
             ></div>
           </div>
-
           <div class="favorite__main max-w-960">
             <div class="favorite__row-container">
               <div class="favorite__images-container">
@@ -129,8 +128,7 @@
               考え込みすぎず、自分の意志をもって突き進みます。<br />
               前に出ること、何かを主張することに躊躇しません。<br />
               <br />
-              <span
-                class="personality__text--emphasis description__text--emphasis"
+              <span class="personality__text--yellow description__text--yellow"
                 >「弾丸の如く、早く速く」</span
               ><br />
               まずは自分が、誰よりも先に。
@@ -155,7 +153,7 @@
                 <img src="./assets/image/form-system.jpg" alt="" />
               </div>
               <div class="products__text-container">
-                <h2 class="products__text--name">お問い合わせフォームCMS</h2>
+                <h3 class="products__text--name">お問い合わせフォームCMS</h3>
                 <p class="products__text--description">
                   地元山梨の企業さんのフォーム管理システムを開発
                   丸2年かけてPHPで構築しました。
@@ -172,7 +170,7 @@
                 <img src="./assets/image/cocktail.jpg" alt="" />
               </div>
               <div class="products__text-container">
-                <h2 class="products__text--name">カクテル検索アプリ</h2>
+                <h3 class="products__text--name">カクテル検索アプリ</h3>
                 <p class="products__text--description">
                   フロントエンドエンジニア必須のNext.jsを利用しています。
                   自ら学び得ることで、会社としての学習コストを削減し数字につなげていきます。
@@ -186,6 +184,37 @@
           </div>
         </section>
         <!-- end products section -->
+
+        <!-- target section -->
+        <section id="target">
+          <div class="section__header-container">
+            <h2 class="section-header__text header-text__shadow--white-lg">
+              MY TARGET
+            </h2>
+            <div
+              class="header__line--horizontal content__shadow-white--lg"
+            ></div>
+          </div>
+          <div class="target__main max-w-960">
+            <div class="target__image-container">
+              <img class="target__image" src="./assets/image/PM.jpg" alt="" />
+            </div>
+            <div class="target__text-container">
+              <h3 class="target__title description__text--yellow">
+                <span class="target__title--yellow">PM・PL</span
+                ><br />大きなプロジェクトを担える人材に
+              </h3>
+              <p class="target__text">
+                開発寄りのマネジメントを目指し、まずは開発を極めます。<br />
+                広く浅くではなく、狭く深くでもなく<span
+                  class="description__text--md"
+                  >「広く深く」</span
+                >
+              </p>
+            </div>
+          </div>
+        </section>
+        <!-- end target section -->
       </div>
     </main>
     <footer class="max-w-1440"></footer>
