feat: targetセクション下の矢印を実装

--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
             </div>
           </div>
           <div class="arrow__container">
-            <img class="arrow__image" src="./assets/image/arrow.svg" alt="" />
+            <img
+              class="arrow__image arrow__image--translateY5"
+              src="./assets/image/arrow.svg"
+              alt=""
+            />
           </div>
         </section>
         <!-- end details section -->
@@ -212,6 +216,13 @@
                 >
               </p>
             </div>
+          </div>
+          <div class="arrow__container">
+            <img
+              class="arrow__image arrow__image--translateY10"
+              src="./assets/image/arrow.svg"
+              alt=""
+            />
           </div>
         </section>
         <!-- end target section -->
