feat: decisionセクションを実装

--- a/index.html
+++ b/index.html
@@ -23,211 +23,260 @@
           MY PROFILE
         </h1>
       </div>
-      <div class="header__line--horizontal content__shadow-white--lg"></div>
+      <div
+        class="header-line__horizontal header-line__horizontal--white content__shadow-white--lg"
+      ></div>
     </header>
     <main class="max-w-1440">
-      <div id="side">
-        <div class="side__text--lg">SHO WAKATSUKI</div>
-        <div class="side__text--lg">WEB DEVELOPER</div>
-        <div class="side__text--lg">I LOVE RAMEN</div>
-      </div>
-      <div id="main" class="max-w-1080">
-        <!-- details section -->
-        <section id="details">
-          <div class="details__main">
-            <div class="details__image-container">
-              <img
-                class="details__item-image"
-                src="./assets/image/profile-image.jpg"
-                alt="若月翔"
-              />
-            </div>
-            <div class="details__text-container">
-              <h2 class="details__text--name">
-                若月 翔<span class="details__text--name-en">Sho Wakatsuki</span>
-              </h2>
-              <p class="details__text--description">
-                山梨県出身<br />
-                情報系の4年制学校卒<br />
-                特技はスティッチの声まね<br />
-                ラーメンを愛し、ラーメンに愛された男
-              </p>
-              <h3 class="details__text--motto">結果はあとから付いてくる</h3>
-            </div>
-          </div>
-          <div class="arrow__container">
-            <img
-              class="arrow__image arrow__image--translateY5"
-              src="./assets/image/arrow.svg"
-              alt=""
-            />
-          </div>
-        </section>
-        <!-- end details section -->
-
-        <!-- favorite section -->
-        <section id="favorite">
-          <div class="section__header-container">
-            <h2 class="section-header__text header-text__shadow--white-lg">
-              MY FAVORITE
-            </h2>
-            <div
-              class="header__line--horizontal content__shadow-white--lg"
-            ></div>
-          </div>
-          <div class="favorite__main max-w-960">
-            <div class="favorite__row-container">
-              <div class="favorite__images-container">
-                <div class="favorite__image">
-                  <img src="./assets/image/ramen-miso.jpg" alt="" />
-                </div>
-                <div class="favorite__image">
-                  <img src="./assets/image/ramen-ziro.jpg" alt="" />
-                </div>
+      <div id="content__black">
+        <div id="side">
+          <div class="side__text--lg">SHO WAKATSUKI</div>
+          <div class="side__text--lg">WEB DEVELOPER</div>
+          <div class="side__text--lg">I LOVE RAMEN</div>
+        </div>
+        <div id="main" class="max-w-1080">
+          <!-- details section -->
+          <section id="details">
+            <div class="details__main">
+              <div class="details__image-container">
+                <img
+                  class="details__item-image"
+                  src="./assets/image/profile-image.jpg"
+                  alt="若月翔"
+                />
               </div>
-              <p class="favorite__text">
-                1週間ラーメンを口にしないと禁断症状が、、、<br />
-                醤油・味噌・塩・家系・次郎何でもばっちこい。<br />
-                ラーメンをはじめとして麺類全般が大好きです！
-              </p>
-            </div>
-            <div class="favorite__row-container">
-              <div class="favorite__images-container">
-                <div class="favorite__image">
-                  <img src="./assets/image/usamaru.jpg" alt="" />
-                </div>
-                <div class="favorite__image">
-                  <img src="./assets/image/kedakoda.jpg" alt="" />
-                </div>
+              <div class="details__text-container">
+                <h2 class="details__text--name">
+                  若月 翔<span class="details__text--name-en"
+                    >Sho Wakatsuki</span
+                  >
+                </h2>
+                <p class="details__text--description">
+                  山梨県出身<br />
+                  情報系の4年制学校卒<br />
+                  特技はスティッチの声まね<br />
+                  ラーメンを愛し、ラーメンに愛された男
+                </p>
+                <h3 class="details__text--motto">結果はあとから付いてくる</h3>
               </div>
-              <p class="favorite__text">
-                ゆるふわなキャラクターが好きで<br />
-                スマホのホーム画面は常に「うさまる」<br />
-                犬や猫などのもふもふ動物も好きです！
-              </p>
             </div>
-          </div>
-        </section>
-        <!-- end favorite section -->
-
-        <!-- personality section -->
-        <section id="personality">
-          <div class="section__header-container">
-            <h2 class="section-header__text header-text__shadow--white-lg">
-              MY PERSONALITY
-            </h2>
-            <div
-              class="header__line--horizontal content__shadow-white--lg"
-            ></div>
-          </div>
-          <div class="personality__main max-w-960">
-            <div class="personality__image-container">
+            <div class="arrow__container">
               <img
-                class="personality__image"
-                src="./assets/image/personality.png"
+                class="arrow__image arrow__image--translateY5"
+                src="./assets/image/arrow.svg"
                 alt=""
               />
             </div>
-            <p class="personality__text">
-              考え込みすぎず、自分の意志をもって突き進みます。<br />
-              前に出ること、何かを主張することに躊躇しません。<br />
-              <br />
-              <span class="personality__text--yellow description__text--yellow"
-                >「弾丸の如く、早く速く」</span
-              ><br />
-              まずは自分が、誰よりも先に。
-            </p>
-          </div>
-        </section>
-        <!-- end personality section -->
+          </section>
+          <!-- end details section -->
 
-        <!-- products section -->
-        <section id="products">
-          <div class="section__header-container">
-            <h2 class="section-header__text header-text__shadow--white-lg">
-              MY PRODUCTS
-            </h2>
-            <div
-              class="header__line--horizontal content__shadow-white--lg"
-            ></div>
-          </div>
-          <div class="products__main max-w-960">
-            <div class="products__row-container">
-              <div class="products__image-container">
-                <img src="./assets/image/form-system.jpg" alt="" />
-              </div>
-              <div class="products__text-container">
-                <h3 class="products__text--name">お問い合わせフォームCMS</h3>
-                <p class="products__text--description">
-                  地元山梨の企業さんのフォーム管理システムを開発
-                  丸2年かけてPHPで構築しました。
-                  SIで使用しているPHPの基礎を習得済みなので、
-                  スピーディに開発へアサインしていただけることを目標にしています。
+          <!-- favorite section -->
+          <section id="favorite">
+            <div class="section__header-container">
+              <h2 class="section-header__text header-text__shadow--white-lg">
+                MY FAVORITE
+              </h2>
+              <div
+                class="header-line__horizontal header-line__horizontal--white content__shadow-white--lg"
+              ></div>
+            </div>
+            <div class="favorite__main max-w-960">
+              <div class="favorite__row-container">
+                <div class="favorite__images-container">
+                  <div class="favorite__image">
+                    <img src="./assets/image/ramen-miso.jpg" alt="" />
+                  </div>
+                  <div class="favorite__image">
+                    <img src="./assets/image/ramen-ziro.jpg" alt="" />
+                  </div>
+                </div>
+                <p class="favorite__text">
+                  1週間ラーメンを口にしないと禁断症状が、、、<br />
+                  醤油・味噌・塩・家系・次郎何でもばっちこい。<br />
+                  ラーメンをはじめとして麺類全般が大好きです！
                 </p>
-                <p class="description__text--sm">
-                  使用技術 : PHP, Javascript, Docker
+              </div>
+              <div class="favorite__row-container">
+                <div class="favorite__images-container">
+                  <div class="favorite__image">
+                    <img src="./assets/image/usamaru.jpg" alt="" />
+                  </div>
+                  <div class="favorite__image">
+                    <img src="./assets/image/kedakoda.jpg" alt="" />
+                  </div>
+                </div>
+                <p class="favorite__text">
+                  ゆるふわなキャラクターが好きで<br />
+                  スマホのホーム画面は常に「うさまる」<br />
+                  犬や猫などのもふもふ動物も好きです！
                 </p>
               </div>
             </div>
-            <div class="products__row-container">
-              <div class="products__image-container">
-                <img src="./assets/image/cocktail.jpg" alt="" />
-              </div>
-              <div class="products__text-container">
-                <h3 class="products__text--name">カクテル検索アプリ</h3>
-                <p class="products__text--description">
-                  フロントエンドエンジニア必須のNext.jsを利用しています。
-                  自ら学び得ることで、会社としての学習コストを削減し数字につなげていきます。
-                  目指せ「髙橋さんの右腕」！！
-                </p>
-                <p class="description__text--sm">
-                  使用技術 : Next.js, Supabase, PrismaORM
-                </p>
-              </div>
-            </div>
-          </div>
-        </section>
-        <!-- end products section -->
+          </section>
+          <!-- end favorite section -->
 
-        <!-- target section -->
-        <section id="target">
-          <div class="section__header-container">
-            <h2 class="section-header__text header-text__shadow--white-lg">
-              MY TARGET
-            </h2>
-            <div
-              class="header__line--horizontal content__shadow-white--lg"
-            ></div>
-          </div>
-          <div class="target__main max-w-960">
-            <div class="target__image-container">
-              <img class="target__image" src="./assets/image/PM.jpg" alt="" />
+          <!-- personality section -->
+          <section id="personality">
+            <div class="section__header-container">
+              <h2 class="section-header__text header-text__shadow--white-lg">
+                MY PERSONALITY
+              </h2>
+              <div
+                class="header-line__horizontal header-line__horizontal--white content__shadow-white--lg"
+              ></div>
             </div>
-            <div class="target__text-container">
-              <h3 class="target__title description__text--yellow">
-                <span class="target__title--yellow">PM・PL</span
-                ><br />大きなプロジェクトを担える人材に
-              </h3>
-              <p class="target__text">
-                開発寄りのマネジメントを目指し、まずは開発を極めます。<br />
-                広く浅くではなく、狭く深くでもなく<span
-                  class="description__text--md"
-                  >「広く深く」</span
-                >
+            <div class="personality__main max-w-960">
+              <div class="personality__image-container">
+                <img
+                  class="personality__image"
+                  src="./assets/image/personality.png"
+                  alt=""
+                />
+              </div>
+              <p class="personality__text">
+                考え込みすぎず、自分の意志をもって突き進みます。<br />
+                前に出ること、何かを主張することに躊躇しません。<br />
+                <br />
+                <span
+                  class="personality__text--yellow description__text--yellow"
+                  >「弾丸の如く、早く速く」</span
+                ><br />
+                まずは自分が、誰よりも先に。
               </p>
             </div>
-          </div>
-          <div class="arrow__container">
-            <img
-              class="arrow__image arrow__image--translateY10"
-              src="./assets/image/arrow.svg"
-              alt=""
-            />
-          </div>
-        </section>
-        <!-- end target section -->
+          </section>
+          <!-- end personality section -->
+
+          <!-- products section -->
+          <section id="products">
+            <div class="section__header-container">
+              <h2 class="section-header__text header-text__shadow--white-lg">
+                MY PRODUCTS
+              </h2>
+              <div
+                class="header-line__horizontal header-line__horizontal--white content__shadow-white--lg"
+              ></div>
+            </div>
+            <div class="products__main max-w-960">
+              <div class="products__row-container">
+                <div class="products__image-container">
+                  <img src="./assets/image/form-system.jpg" alt="" />
+                </div>
+                <div class="products__text-container">
+                  <h3 class="products__text--name">お問い合わせフォームCMS</h3>
+                  <p class="products__text--description">
+                    地元山梨の企業さんのフォーム管理システムを開発
+                    丸2年かけてPHPで構築しました。
+                    SIで使用しているPHPの基礎を習得済みなので、
+                    スピーディに開発へアサインしていただけることを目標にしています。
+                  </p>
+                  <p class="description__text--sm">
+                    使用技術 : PHP, Javascript, Docker
+                  </p>
+                </div>
+              </div>
+              <div class="products__row-container">
+                <div class="products__image-container">
+                  <img src="./assets/image/cocktail.jpg" alt="" />
+                </div>
+                <div class="products__text-container">
+                  <h3 class="products__text--name">カクテル検索アプリ</h3>
+                  <p class="products__text--description">
+                    フロントエンドエンジニア必須のNext.jsを利用しています。
+                    自ら学び得ることで、会社としての学習コストを削減し数字につなげていきます。
+                    目指せ「髙橋さんの右腕」！！
+                  </p>
+                  <p class="description__text--sm">
+                    使用技術 : Next.js, Supabase, PrismaORM
+                  </p>
+                </div>
+              </div>
+            </div>
+          </section>
+          <!-- end products section -->
+
+          <!-- target section -->
+          <section id="target">
+            <div class="section__header-container">
+              <h2 class="section-header__text header-text__shadow--white-lg">
+                MY TARGET
+              </h2>
+              <div
+                class="header-line__horizontal header-line__horizontal--white content__shadow-white--lg"
+              ></div>
+            </div>
+            <div class="target__main max-w-960">
+              <div class="target__image-container">
+                <img class="target__image" src="./assets/image/PM.jpg" alt="" />
+              </div>
+              <div class="target__text-container">
+                <h3 class="target__title description__text--yellow">
+                  <span class="target__title--yellow">PM・PL</span
+                  ><br />大きなプロジェクトを担える人材に
+                </h3>
+                <p class="target__text">
+                  開発寄りのマネジメントを目指し、まずは開発を極めます。<br />
+                  広く浅くではなく、狭く深くでもなく<span
+                    class="description__text--md"
+                    >「広く深く」</span
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="arrow__container">
+              <img
+                class="arrow__image arrow__image--translateY10"
+                src="./assets/image/arrow.svg"
+                alt=""
+              />
+            </div>
+          </section>
+          <!-- end target section -->
+        </div>
+      </div>
+      <div id="content__white" class="">
+        <div id="last" class="max-w-1080">
+          <section id="decision">
+            <div class="section__header-container">
+              <h2 class="section-header__text header-text__shadow--black-lg">
+                MY FAVORITE
+              </h2>
+              <div
+                class="header-line__horizontal header-line__horizontal--black content__shadow-black--lg"
+              ></div>
+            </div>
+            <div class="decision__main max-w-960">
+              <div class="decision__inrroduction-text-container">
+                <h3
+                  class="decision__introduction-text decision__introduction-text--left"
+                >
+                  誰よりもストイックに
+                </h3>
+                <h3
+                  class="decision__introduction-text decision__introduction-text--right"
+                >
+                  結果にこだわるプレイヤーへ
+                </h3>
+              </div>
+              <div class="decision__image-container">
+                <img
+                  class="decision__bullet-logo"
+                  src="./assets/image/logo.svg"
+                  alt=""
+                />
+              </div>
+              <div class="decision__text-container">
+                <h4 class="decision__text--md">新人賞をとるのは</h4>
+                <h4 class="decision__text--lg">他の誰でもない、私だっ！</h4>
+              </div>
+              <div class="decision__name">若月 翔</div>
+            </div>
+          </section>
+        </div>
       </div>
     </main>
-    <footer class="max-w-1440"></footer>
+    <footer class="max-w-1440">
+      <div>Thank You Watching !!</div>
+    </footer>
   </body>
 </html>
