update: セクション下の余白を削除

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           <section id="decision">
             <div class="section__header-container">
               <h2 class="section-header__text header-text__shadow--black-lg">
-                MY FAVORITE
+                MY DECISION
               </h2>
               <div
                 class="header-line__horizontal header-line__horizontal--black content__shadow-black--lg"
