update: 768px以下のときに要素を縦並びの中央寄せにするように改良

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
               </div>
               <div class="details__text-container">
                 <h2 class="details__text--name">
-                  若月 翔<span class="details__text--name-en"
-                    >Sho Wakatsuki</span
+                  <span>若月<span class="details__name-space"></span>翔</span>
+                  <span class="details__text--name-en"
+                    >Sho<span class="details__name-space"></span>Wakatsuki</span
                   >
                 </h2>
                 <p class="details__text--description">
