update: detailsセクションのタブレットサイズ対応を実装

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="max-w-1440">
       <div class="header__main">
         <h1 class="header__main-text header-text__shadow--white-lg">
-          MY PROFILE
+          MY <br class="lg-hidden" />PROFILE
         </h1>
       </div>
       <div
@@ -75,7 +75,7 @@
           <section id="favorite">
             <div class="section__header-container">
               <h2 class="section-header__text header-text__shadow--white-lg">
-                MY FAVORITE
+                MY <br class="lg-hidden" />FAVORITE
               </h2>
               <div
                 class="header-line__horizontal header-line__horizontal--white content__shadow-white--lg"
@@ -120,7 +120,7 @@
           <section id="personality">
             <div class="section__header-container">
               <h2 class="section-header__text header-text__shadow--white-lg">
-                MY PERSONALITY
+                MY <br class="lg-hidden" />PERSONALITY
               </h2>
               <div
                 class="header-line__horizontal header-line__horizontal--white content__shadow-white--lg"
@@ -152,7 +152,7 @@
           <section id="products">
             <div class="section__header-container">
               <h2 class="section-header__text header-text__shadow--white-lg">
-                MY PRODUCTS
+                MY <br class="lg-hidden" />PRODUCTS
               </h2>
               <div
                 class="header-line__horizontal header-line__horizontal--white content__shadow-white--lg"
@@ -200,7 +200,7 @@
           <section id="target">
             <div class="section__header-container">
               <h2 class="section-header__text header-text__shadow--white-lg">
-                MY TARGET
+                MY <br class="lg-hidden" />TARGET
               </h2>
               <div
                 class="header-line__horizontal header-line__horizontal--white content__shadow-white--lg"
@@ -240,7 +240,7 @@
           <section id="decision">
             <div class="section__header-container">
               <h2 class="section-header__text header-text__shadow--black-lg">
-                MY DECISION
+                MY <br class="lg-hidden" />DECISION
               </h2>
               <div
                 class="header-line__horizontal header-line__horizontal--black content__shadow-black--lg"
